# googleapis-tonic

./: .gitignore  .gitmodules  Cargo.toml  README.md  shell.nix
.github/: dependabot.yml
.github/workflows/: ci.yaml  publish.yaml  update.yaml
crates/googleapis-tonic-google-actions-sdk-v2/: Cargo.toml
crates/googleapis-tonic-google-actions-sdk-v2-conversation/: Cargo.toml
crates/googleapis-tonic-google-actions-sdk-v2-interactionmodel/: Cargo.toml
crates/googleapis-tonic-google-actions-sdk-v2-interactionmodel-prompt/: Cargo.toml
crates/googleapis-tonic-google-actions-sdk-v2-interactionmodel-type/: Cargo.toml
crates/googleapis-tonic-google-actions-type/: Cargo.toml
crates/googleapis-tonic-google-ads-admanager-v1/: Cargo.toml
crates/googleapis-tonic-google-ads-admob-v1/: Cargo.toml
crates/googleapis-tonic-google-ads-googleads-v15-common/: Cargo.toml
crates/googleapis-tonic-google-ads-googleads-v15-enums/: Cargo.toml
crates/googleapis-tonic-google-ads-googleads-v15-errors/: Cargo.toml
crates/googleapis-tonic-google-ads-googleads-v15-resources/: Cargo.toml
crates/googleapis-tonic-google-ads-googleads-v15-services/: Cargo.toml
crates/googleapis-tonic-google-ads-googleads-v16-common/: Cargo.toml
crates/googleapis-tonic-google-ads-googleads-v16-enums/: Cargo.toml
crates/googleapis-tonic-google-ads-googleads-v16-errors/: Cargo.toml
crates/googleapis-tonic-google-ads-googleads-v16-resources/: Cargo.toml
crates/googleapis-tonic-google-ads-googleads-v16-services/: Cargo.toml
crates/googleapis-tonic-google-ads-googleads-v17-common/: Cargo.toml
crates/googleapis-tonic-google-ads-googleads-v17-enums/: Cargo.toml
crates/googleapis-tonic-google-ads-googleads-v17-errors/: Cargo.toml
crates/googleapis-tonic-google-ads-googleads-v17-resources/: Cargo.toml
crates/googleapis-tonic-google-ads-googleads-v17-services/: Cargo.toml
crates/googleapis-tonic-google-ads-searchads360-v0-common/: Cargo.toml
crates/googleapis-tonic-google-ads-searchads360-v0-enums/: Cargo.toml
crates/googleapis-tonic-google-ads-searchads360-v0-errors/: Cargo.toml
crates/googleapis-tonic-google-ads-searchads360-v0-resources/: Cargo.toml
crates/googleapis-tonic-google-ads-searchads360-v0-services/: Cargo.toml
crates/googleapis-tonic-google-ai-generativelanguage-v1/: Cargo.toml
crates/googleapis-tonic-google-ai-generativelanguage-v1beta/: Cargo.toml
crates/googleapis-tonic-google-ai-generativelanguage-v1beta2/: Cargo.toml
crates/googleapis-tonic-google-ai-generativelanguage-v1beta3/: Cargo.toml
crates/googleapis-tonic-google-analytics-admin-v1alpha/: Cargo.toml
crates/googleapis-tonic-google-analytics-admin-v1beta/: Cargo.toml
crates/googleapis-tonic-google-analytics-data-v1alpha/: Cargo.toml
crates/googleapis-tonic-google-analytics-data-v1beta/: Cargo.toml
crates/googleapis-tonic-google-api-apikeys-v2/: Cargo.toml
crates/googleapis-tonic-google-api-cloudquotas-v1/: Cargo.toml
crates/googleapis-tonic-google-api-expr-conformance-v1alpha1/: Cargo.toml
crates/googleapis-tonic/examples/firestore/: Cargo.toml
crates/googleapis-tonic/examples/firestore/src/: main.rs
crates/xtask/: Cargo.toml  state.json
crates/xtask/src/: bytes_type.rs  command.rs  crate_name.rs  crate_version.rs  dirs.rs  feature_name.rs  googleapis.rs  googleapis_version.rs  ident.rs  main.rs  map_type.rs  module.rs  modules.rs  package_name.rs  proto_dir.rs  proto_file.rs  proto_file_path.rs  protobuf_package_name.rs  sha1hash.rs  state.rs
crates/xtask/src/command/: build.rs  publish.rs  show_googleapis_version.rs  test.rs  update_googleapis.rs  update_readme.rs
examples/googleapis-tonic-google-firestore-v1-1/: Cargo.toml
examples/googleapis-tonic-google-firestore-v1-1/src/: main.rs
(+4197 files in other folders)
