[package]
name = "xtask"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.86"
async-recursion = "1.1.1"
clap = { version = "4.5.17", features = ["derive"] }
hex = "0.4.3"
prost-build = { version = "0.13.1", features = ["cleanup-markdown"] }
reqwest = { version = "0.12.7", features = ["json"] }
semver = "1.0.23"
serde = { version = "1.0.205", features = ["derive"] }
serde_json = "1.0.122"
sha1 = "0.10.6"
tokio = { version = "1.39.3", features = ["full"] }
toml_edit = "0.22.17"
tonic-build = "0.12.1"

[dev-dependencies]
tempfile = "3.12.0"
