[package]
name = "xtask"
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
async-recursion = "1.1.1"
clap = { version = "4.5", features = ["derive"] }
hex = "0.4.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10.6"
tokio = { version = "1.44", features = ["full"] }
toml_edit = "0.22.24"
tonic-build = "0.13.1"

[dev-dependencies]
tempfile = "3.19"
