[package]
name = "googleapis-tonic-google-firestore-v1-1"
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
firestore-path = "0.9.29"
google-cloud-auth = { version = "0.17.1", default-features = false, features = ["rustls-tls"] }
google-cloud-token = "0.1.2"
googleapis-tonic-google-firestore-v1 = "0.9.0"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.12.3", default-features = false, features = ["tls-webpki-roots"] }
