[package]
name = "googleapis-tonic-google-firestore-v1-1"
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
firestore-path = "1"
google-cloud-auth = { version = "0.17.2", default-features = false, features = ["rustls-tls"] }
google-cloud-token = "0.1.2"
googleapis-tonic-google-firestore-v1 = "0.20.0"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.13.1", default-features = false, features = ["tls-webpki-roots"] }
