[package]
edition = "2021"
name = "firestore"
publish = false

[dependencies]
anyhow = "1.0.86"
google-cloud-auth = { version = "0.16.0", default-features = false, features = ["rustls-tls"] }
googleapis-tonic = { path = "../..", features = ["google-firestore-v1"] }
tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread"] }
